EDA overview answers

--- a/poshem_business_school_sales.ipynb
+++ b/poshem_business_school_sales.ipynb
@@ -883,9 +883,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b7c1223",
+   "metadata": {},
+   "source": [
+    "1. How many unique orders are there in the dataset?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "df36c201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique Order: 4922 orders.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of unique Order: {sales_df['Order ID'].nunique()} orders.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df36c201",
+   "id": "062d9fb6",
    "metadata": {},
    "outputs": [],
    "source": []
