EDA order stats  answers

--- a/poshem_business_school_sales.ipynb
+++ b/poshem_business_school_sales.ipynb
@@ -909,12 +909,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b79e920d",
+   "metadata": {},
+   "source": [
+    "2. what is the distribution of order statistics(eg delivered, pending)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "062d9fb6",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0372216",
+   "metadata": {},
+   "source": [
+    "3. How many unique Customers are there?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "942e9655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The unique customers in the dataset are 793 customers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The unique customers in the dataset are {sales_df['Customer Name'].nunique()} customers.\")"
+   ]
   }
  ],
  "metadata": {
